--- a/src/index.html
+++ b/src/index.html
@@ -226,7 +226,7 @@
             <div class="feature--wrap flex">
                 <div class="col-30">
                     <div class="feature--left">
-                        <img src="./images/feature.jpg" alt="feature">
+                        <img src="./images/feature-1.png" alt="feature">
                     </div>
                 </div>
                 <div class="col-70">
@@ -278,6 +278,47 @@
 </section>
 
 <!-- feature section end -->
+
+<!-- review section start -->
+<section class="section__review">
+    <div class="container">
+        <div class="review">
+            <div class="review--title">
+                <h2>amazing reviews</h2>
+                <p>Scientifically Recognized Worldwide: Dreo Macro Pro air purifier brings air quality to the next level.</p>
+            </div>
+            <div class="review--wrap">
+                <div class="review--box__wrap flex">
+                    <div class="review--box__image">
+                        <img src="./images/review.jpg" alt="review">
+                    </div>
+                    <div class="review--box__content">
+                        <div class="review--box__star">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="col-70">
+                            <div class="review--box__text">
+                                <h5>Great airpurifier within my budget!</h5>
+                                <p>Pollutants Have Nowhere to Hide: Captures 99.97% of airborne particles down to 0.3 microns, including dust, pet dander, smoke, odor, and more.</p>
+                            </div>
+                            <div class="review--verified">
+                                <span>Alan T.</span>
+                                <div class="review--verified__customer">
+                                    <img src="./images/customer.jpg" alt="customer">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- review section end -->
 
 </body>
 </html>
