--- a/src/index.html
+++ b/src/index.html
@@ -289,27 +289,116 @@
             </div>
             <div class="review--wrap">
                 <div class="review--box__wrap flex">
-                    <div class="review--box__image">
-                        <img src="./images/review.jpg" alt="review">
-                    </div>
-                    <div class="review--box__content">
-                        <div class="review--box__star">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
+                    <div class="col-30">
+                        <div class="review--box__image">
+                            <img src="./images/review.jpg" alt="review">
                         </div>
-                        <div class="col-70">
-                            <div class="review--box__text">
-                                <h5>Great airpurifier within my budget!</h5>
-                                <p>Pollutants Have Nowhere to Hide: Captures 99.97% of airborne particles down to 0.3 microns, including dust, pet dander, smoke, odor, and more.</p>
+                    </div>
+                    <div class="col-70">
+                        <div class="review--box__content">
+                            <div class="review--box__star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
-                            <div class="review--verified">
-                                <span>Alan T.</span>
-                                <div class="review--verified__customer">
-                                    <img src="./images/customer.jpg" alt="customer">
-                                </div>
+                        </div>
+                        <div class="review--box__text">
+                            <h5>Great airpurifier within my budget!</h5>
+                            <p>Pollutants Have Nowhere to Hide: Captures 99.97% of airborne particles down to 0.3 microns, including dust, pet dander, smoke, odor, and more.</p>
+                        </div>
+                        <div class="review--verified flex">
+                            <span>Alan T.</span>
+                            <div class="review--verified__customer">
+                                <img src="./images/customer.jpg" alt="customer">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="review--line"></div>
+                <div class="review--box__wrap flex">
+                    <div class="col-30">
+                        <div class="review--box__image">
+                            <img src="./images/review1.jpg" alt="review">
+                        </div>
+                    </div>
+                    <div class="col-70">
+                        <div class="review--box__content">
+                            <div class="review--box__star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="review--box__text">
+                            <h5>Great airpurifier within my budget!</h5>
+                            <p>Pollutants Have Nowhere to Hide: Captures 99.97% of airborne particles down to 0.3 microns, including dust, pet dander, smoke, odor, and more.</p>
+                        </div>
+                        <div class="review--verified flex">
+                            <span>Alan T.</span>
+                            <div class="review--verified__customer">
+                                <img src="./images/customer.jpg" alt="customer">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="review--line"></div>
+                <div class="review--box__wrap flex">
+                    <div class="col-30">
+                        <div class="review--box__image">
+                            <img src="./images/review2.jpg" alt="review">
+                        </div>
+                    </div>
+                    <div class="col-70">
+                        <div class="review--box__content">
+                            <div class="review--box__star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="review--box__text">
+                            <h5>Great airpurifier within my budget!</h5>
+                            <p>Pollutants Have Nowhere to Hide: Captures 99.97% of airborne particles down to 0.3 microns, including dust, pet dander, smoke, odor, and more.</p>
+                        </div>
+                        <div class="review--verified flex">
+                            <span>Alan T.</span>
+                            <div class="review--verified__customer">
+                                <img src="./images/customer.jpg" alt="customer">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="review--line"></div>
+                <div class="review--box__wrap flex">
+                    <div class="col-30">
+                        <div class="review--box__image">
+                            <img src="./images/review3.jpg" alt="review">
+                        </div>
+                    </div>
+                    <div class="col-70">
+                        <div class="review--box__content">
+                            <div class="review--box__star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="review--box__text">
+                            <h5>Great airpurifier within my budget!</h5>
+                            <p>Pollutants Have Nowhere to Hide: Captures 99.97% of airborne particles down to 0.3 microns, including dust, pet dander, smoke, odor, and more.</p>
+                        </div>
+                        <div class="review--verified flex">
+                            <span>Alan T.</span>
+                            <div class="review--verified__customer">
+                                <img src="./images/customer.jpg" alt="customer">
                             </div>
                         </div>
                     </div>
@@ -319,6 +408,29 @@
     </div>
 </section>
 <!-- review section end -->
+
+<!-- product section start -->
+<section class="section__product">
+    <div class="container">
+        <div class="product--content">
+            <div class="product--wrap flex">
+                <div class="col-40">
+                    <div class="product--image">
+                        <img src="./images/feature.png" alt="feature">
+                    </div>
+                </div>
+                <div class="col-60">
+                    <div class="product--title">
+                        <h2>product features</h2>
+                        <p>Scientifically Recognized Worldwide: Dreo Macro Pro air purifier brings air quality to the next level.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+<!-- production css end -->
 
 </body>
 </html>
