--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css" integrity="sha384-fZCoUih8XsaUZnNDOiLqnby1tMJ0sE7oBbNk2Xxf5x8Z4SvNQ9j83vFMa/erbVrV" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./stylesheets/styles.css">
 </head>
@@ -30,7 +31,7 @@
         <div class="cover">
             <div class="cover--logo flex">
                 <div class="cover--image">
-                    <img src="./images/primeday.svg" alt="primeday">
+                    <img src="./images/primeday1.svg" alt="primeday">
                 </div>
                 <div class="cover--btn">
                     <button class="btn--site"><i class="fa-solid fa-shop"></i> www.fullstorepurifier.com</button>
@@ -276,7 +277,6 @@
         </div>
     </div>
 </section>
-
 <!-- feature section end -->
 
 <!-- review section start -->
@@ -423,6 +423,32 @@
                     <div class="product--title">
                         <h2>product features</h2>
                         <p>Scientifically Recognized Worldwide: Dreo Macro Pro air purifier brings air quality to the next level.</p>
+                        <div class="product--detail">
+                            <div class="product--detail__wrap flex">
+                                <ul class="product--text">
+                                    <li>Dimensions</li>
+                                    <li>Weight</li>
+                                    <li>Material</li> 
+                                    <li>Calibration</li> 
+                                    <li>Status Indicator</li>    
+                                    <li>Network Connectivity</li>   
+                                    <li>Power Supply</li>  
+                                    <li>Input</li>  
+                                    <li>Warranty & Service</li>  
+                                </ul>
+                                <ul class="product--discription">
+                                    <li><span>:</span>65x65x45mm (WxLxH)</li>
+                                    <li><span>:</span>120 grams</li>
+                                    <li><span>:</span>Post-consumer recycled</li>
+                                    <li><span>:</span>Auto calibration</li>
+                                    <li><span>:</span>Multicolor LED</li>
+                                    <li><span>:</span>2.4GHz Wi-Fi</li>
+                                    <li><span>:</span>Smart Air Quality Monitor</li>
+                                    <li><span>:</span>100-240V 50/60Hz</li>
+                                    <li><span>:</span>One year limited</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -431,6 +457,261 @@
     </div>
 </section>
 <!-- production css end -->
+
+<!-- header section -->
+<header>
+    <div class="container">
+        <div class="header--content">
+            <div class="header--title flex">
+                <h1>Welcome To <img src="./images/amazon.svg" alt="amazon">Prime Day 2022 Deal</h1>
+                <button class="btn-off">50% off</button>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- header section end -->
+
+<!-- gallery section start -->
+<section class="section__gallery">
+    <div class="container">
+        <div class="gallery flex">
+            <div class="col-25">
+                <div class="gallery--image">
+                    <img src="./images/prime.png" alt="prime">
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="gallery--image">
+                    <img src="./images/prime1.png" alt="prime">
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="gallery--image">
+                    <img src="./images/prime2.png" alt="prime">
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="gallery--image">
+                    <img src="./images/prime3.png" alt="prime">
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="gallery--image">
+                    <img src="./images/prime4.png" alt="prime">
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="gallery--image">
+                    <img src="./images/prime5.png" alt="prime">
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="gallery--image">
+                    <img src="./images/prime6.png" alt="prime">
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="gallery--image">
+                    <img src="./images/prime7.png" alt="prime">
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- gallery section end -->
+
+<!-- other product section start -->
+<section class="section__other--product">
+    <div class="container">
+        <div class="other--product__title">
+            <h2>Other products</h2>
+        </div>
+        <div class="other--product flex">
+            <div class="col-25">
+                <div class="other--product__card">
+                    <div class="other--product__image">
+                        <img src="./images/product.jpg" alt="product">
+                    </div>
+                    <div class="other--product__content">
+                        <h5>Honeywell HPA200 HEPA Air Purifier Large Room (310 sq. ft), Black</h5>
+                        <div class="other--product__rating flex">
+                            <div class="other--product__star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <div class="other--product__rate">
+                                <span>108 Ratings</span>
+                            </div>
+                        </div>
+                        <div class="other--product__prime flex">
+                            <strong>$150.00</strong>
+                           <img src="./images/price.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="other--product__card">
+                    <div class="other--product__image">
+                        <img src="./images/product1.jpg" alt="product">
+                    </div>
+                    <div class="other--product__content">
+                        <h5>Honeywell HPA200 HEPA Air Purifier Large Room (310 sq. ft), Black</h5>
+                        <div class="other--product__rating flex">
+                            <div class="other--product__star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <div class="other--product__rate">
+                                <span>108 Ratings</span>
+                            </div>
+                        </div>
+                        <div class="other--product__prime flex">
+                            <strong>$150.00</strong>
+                           <img src="./images/price.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="other--product__card">
+                    <div class="other--product__image">
+                        <img src="./images/producr2.jpg" alt="product">
+                    </div>
+                    <div class="other--product__content">
+                        <h5>Honeywell HPA200 HEPA Air Purifier Large Room (310 sq. ft), Black</h5>
+                        <div class="other--product__rating flex">
+                            <div class="other--product__star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <div class="other--product__rate">
+                                <span>108 Ratings</span>
+                            </div>
+                        </div>
+                        <div class="other--product__prime flex">
+                            <strong>$150.00</strong>
+                           <img src="./images/price.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-25">
+                <div class="other--product__card">
+                    <div class="other--product__image">
+                        <img src="./images/product3.jpg" alt="product">
+                    </div>
+                    <div class="other--product__content">
+                        <h5>Honeywell HPA200 HEPA Air Purifier Large Room (310 sq. ft), Black</h5>
+                        <div class="other--product__rating flex">
+                            <div class="other--product__star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <div class="other--product__rate">
+                                <span>108 Ratings</span>
+                            </div>
+                        </div>
+                        <div class="other--product__prime flex">
+                            <strong>$150.00</strong>
+                           <img src="./images/price.svg" alt="price">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- other product section end -->
+
+<!-- faq section start -->
+<section class="section__faq">
+    <div class="container">
+        <div class="faq--title">
+            <h2>Frequently asked questions</h2>
+        </div>
+        <div class="accordion">
+            <div class="faq-main flex">
+                <div class="col-50">
+                    <div class="faq-left">
+                        <div class="accordion-item">
+                            <a>Can I use this device to build Routines with other Works with Alexa devices?</a>
+                            <div class="content">
+                                <p>Yes, you can enable a Routine with the Amazon Smart Air Quality Monitor. This allows you to automate and manage compatible Works with Alexa devices, such as turning your air purifier on or off.</p>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <a>Can I use this device to build Routines with other Works with Alexa devices?</a>
+                            <div class="content">
+                                <p>Yes, you can enable a Routine with the Amazon Smart Air Quality Monitor. This allows you to automate and manage compatible Works with Alexa devices, such as turning your air purifier on or off.</p>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <a>Can I use this device to build Routines with other Works with Alexa devices?</a>
+                            <div class="content">
+                                <p>Yes, you can enable a Routine with the Amazon Smart Air Quality Monitor. This allows you to automate and manage compatible Works with Alexa devices, such as turning your air purifier on or off.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-50">
+                    <div class="faq-right">
+                    
+                        <div class="accordion-item">
+                            <a>Can I use this device to build Routines with other Works with Alexa devices?</a>
+                            <div class="content">
+                                <p>Yes, you can enable a Routine with the Amazon Smart Air Quality Monitor. This allows you to automate and manage compatible Works with Alexa devices, such as turning your air purifier on or off.</p>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <a>Can I use this device to build Routines with other Works with Alexa devices?</a>
+                            <div class="content">
+                                <p>Yes, you can enable a Routine with the Amazon Smart Air Quality Monitor. This allows you to automate and manage compatible Works with Alexa devices, such as turning your air purifier on or off.</p>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <a>Can I use this device to build Routines with other Works with Alexa devices?</a>
+                            <div class="content">
+                                <p>Yes, you can enable a Routine with the Amazon Smart Air Quality Monitor. This allows you to automate and manage compatible Works with Alexa devices, such as turning your air purifier on or off.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- faq section end-->
+
+<!-- footer section start -->
+<footer class="footer">
+    <div class="container">
+        <div class="footer--content flex">
+            <div class="footer--image"><img src="./images/primeday.svg" alt="primeday"></div>
+            <span>© 2022 Pagemaker</span>
+        </div>
+    </div>
+
+</footer>
+<!-- footer section end -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="./javascripts/scripts.js"></script>
 
 </body>
 </html>
