--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css" integrity="sha384-fZCoUih8XsaUZnNDOiLqnby1tMJ0sE7oBbNk2Xxf5x8Z4SvNQ9j83vFMa/erbVrV" crossorigin="anonymous"/>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./stylesheets/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 </head>
 <body>
     <!-- header section start -->
@@ -709,8 +710,15 @@
 </footer>
 <!-- footer section end -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="./javascripts/scripts.js"></script>
 
+<!-- <script src="./javascripts/scripts.js"></script> -->
+<script>
+    $(document).ready(function () {
+  $('.accordion a').click(function () {
+    $(this).toggleClass('active');
+    $(this).next('.content').slideToggle(800);
+  });
+});
+</script>
 </body>
 </html>
