--- a/src/index.html
+++ b/src/index.html
@@ -712,13 +712,13 @@
 
 
 <!-- <script src="./javascripts/scripts.js"></script> -->
-<script>
+<!-- <script>
     $(document).ready(function () {
   $('.accordion a').click(function () {
     $(this).toggleClass('active');
     $(this).next('.content').slideToggle(800);
   });
 });
-</script>
+</script> -->
 </body>
 </html>
